fixed text alignment for links

--- a/bingle.css
+++ b/bingle.css
@@ -27,3 +27,10 @@ body{
     text-align: center;
     color: red;
 }
+.links{
+    text-align: center;
+    text-decoration: wavy;
+}
+#note2{
+    color: red;
+}
